--- a/config.json
+++ b/config.json
@@ -10,8 +10,43 @@
         "key": "k",
         "modifiers": ["shift"],
         "type": "sound",
-        "filePath": "sounds/Sounds/Accessing1.wav",
+        "filePath": "sounds/Sounds/Death Star Alarm.wav",
         "loopable": true
+    },
+    {
+        "key": "k",
+        "modifiers": ["ctrl", "shift"],
+        "type": "sound",
+        "filePath":"sounds/Sounds/EMP.wav",
+        "loopable":false
+    },
+    {
+        "key": "k",
+        "modifiers": ["alt"],
+        "type": "sound",
+        "filePath":"sounds/Sounds/Scanned.wav",
+        "loopable":false
+    },
+    {
+        "key": "k",
+        "modifiers": ["alt", "shift"],
+        "type": "sound",
+        "filePath":"sounds/Sounds/Doors.wav",
+        "loopable":false
+    },
+    {
+        "key": "k",
+        "modifiers": ["ctrl", "alt"],
+        "type": "sound",
+        "filePath":"sounds/Sounds/Door Up.wav",
+        "loopable":true
+    },
+    {
+        "key": "k",
+        "modifiers": ["ctrl", "shift", "alt"],
+        "type": "sound",
+        "filePath":"sounds/Sounds/Error.wav",
+        "loopable":false
     },
     {
         "key": ".",
